--- a/login/login.css
+++ b/login/login.css
@@ -193,3 +193,24 @@ button {
   padding-top:50px;
   margin: auto;
 }
+
+.bi-eye-slash::before {
+  content: "\f320";
+}
+
+[class^="bi-"]::before, [class*=" bi-"]::before {
+  display: inline-block;
+  font-family: bootstrap-icons !important;
+  font-style: normal;
+  font-weight: normal !important;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  vertical-align: text-bottom;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+form i {
+  margin-left: -30px;
+  cursor: pointer;
+}
