--- a/global/header.css
+++ b/global/header.css
@@ -34,7 +34,7 @@
     line-height: 1.5;
     padding-top: 0.2rem;
     padding-left: 1rem;
-    
+    border: none;
     padding-bottom: 0.2rem;
   }
   .header_left {
@@ -52,15 +52,14 @@
   .header_right {
     text-align: right;
     position: relative;
-    width: 50%;
+    width: auto;
     height: 100%;
     white-space: nowrap;
     display: flex;
     align-items: center;
     justify-content: center;
     justify-content: flex-end;
-    margin-right: 1rem;
-    
+    padding-right: 1.5rem; /*distance from nav buttons to right side*/    
   }
   .header_nav_links {
     font-family: "Poppins", sans-serif;
@@ -73,14 +72,20 @@
     color: var(--header_nav_text);
   }
   .filler {
+    position:absolute;
+    top:0;
     height: 50px;
   }
   .header_nav_button{
     display: inline;
-    border-radius: 0.5rem;
-    margin-right: 1rem;
+    border-radius: 1rem;
+    border: none;
+    border-width: 0;
+    margin-right: 1rem;/*distance between boxes */    
     background: var(--header_button_bg);
     color: var(--header_nav_links);
+    -webkit-transition: color 0.5s background-color 0.5s;
+    transition: background-color 0.5s ease, color 0.5s ease;  
   }
   .header_nav_button:hover{
     background: var(--header_button_hover);
