--- a/sign_up/sign_up.css
+++ b/sign_up/sign_up.css
@@ -1,7 +1,20 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 @import url("https://fonts.googleapis.com/css2?family=Anuphan&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
-
+* {
+    animation: fadeInAnimation ease 0.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+ 
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+}
 @media (prefers-color-scheme: light) {
     :root {
         /* --main: rgb(237,242,247);
@@ -14,17 +27,17 @@
         --login_box_in_button: #4c4c4c;
         --login_box_in_button_text: #ded4c1;
         --login_box_in_button_hover: #2a2a2a;
-        --login_box_in_button_text_hover: #ded4c1;
+        --login_box_in_button_text_hover:#ded4c1;
         --login_box_up_button: #ffffff;
         --login_box_up_button_text: #4c4c4c;
         --login_box_up_button_hover: #474747;
         --login_box_up_button_text_hover: #ab9d83;
-        --button_border: #535353;
+        --button_border: #535353 ;
         --button-text-color: #707070;
         --login_box_button_hover: #aba18f;
         --forgot_password_text_color: #818181;
         --forgot_password_text_hover_color: #000000;
-        --forgot_password_underline_color: rgba(0, 0, 0, 0);
+        --forgot_password_underline_color: rgba(0,0,0,0);
         --forgot_password_underline_hover_color: rgba(0, 0, 0, 1);
         --shadow: rgba(0, 0, 0, 0.2);
     }
@@ -41,13 +54,13 @@
         --login_box_in_button: #4c4c4c;
         --login_box_in_button_text: #ded4c1;
         --login_box_in_button_hover: #2a2a2a;
-        --login_box_in_button_text_hover: #ded4c1;
-        --button_border: #535353;
+        --login_box_in_button_text_hover:#ded4c1;
+        --button_border: #535353 ;
         --button-text-color: #707070;
         --login_box_button_hover: #aba18f;
         --forgot_password_text_color: #818181;
         --forgot_password_text_hover_color: #000000;
-        --forgot_password_underline_color: rgba(0, 0, 0, 0);
+        --forgot_password_underline_color: rgba(0,0,0,0);
         --forgot_password_underline_hover_color: rgba(0, 0, 0, 1);
         --shadow: rgba(0, 0, 0, 0.2);
     }
@@ -132,31 +145,9 @@ button {
     -webkit-transition: -webkit-transform 0.3s ease-out;
     transition: transform 0.3s ease-out;
 }
-
-
-input[type="email"]:invalid::before {
-    /* Change the color of the validation message */
-    color: #f44336;
-    content: "✖ ";
-    font-size: smaller;
-}
-
-input[type="email"]:invalid::after {
-    /* Change the background color of the validation pop-up */
-    background-color: #f44336;
-    border-radius: 5px;
-    color: white;
-    content: attr(title);
-    font-size: smaller;
-    padding: 2px 5px;
-    position: absolute;
-    right: 0;
-    top: 100%;
-    z-index: 1;
-}
-.input_box:focus {
-    transform: scale(1.05, 1.05);
-    -webkit-transform: scale(1.05, 1.05);
+.input_box:focus{
+  transform:scale(1.05,1.05);
+  -webkit-transform:scale(1.05,1.05);
 }
 .buttons{
     display: flex;
@@ -178,27 +169,25 @@ input[type="email"]:invalid::after {
     text-align: center;
     margin-top: 0.2rem;
     margin-bottom: 0.2rem;
-    display: inline-block;
+    /* padding: 0.6rem 5rem 0.6rem; */
     width:90%;
-    /* padding: 0.6rem auto 0.6rem; */
-    -webkit-transition: color 0.6s, background-color 1s,
-        -webkit-transform 0.3s ease-out;
-    transition: color 0.6s ease, background-color 1s ease,
-        transform 0.3s ease-out;
+    -webkit-transition: color 0.6s,background-color 1s, -webkit-transform 0.3s ease-out;
+    transition: color 0.6s ease, background-color 1s ease, transform 0.3s ease-out;
+    
 }
 .sign_in_box {
     background-color: var(--login_box_in_button);
     color: var(--login_box_in_button_text);
-    float: right;
-    margin-left: auto;
-    margin-right: 0;
+    float: left;
+    margin-left: 0;
+    margin-right: auto;
 }
 .sign_up_box {
     background-color: var(--login_box_up_button);
     color: var(--login_box_up_button_text);
-    float: left;
-    margin-left: 0;
-    margin-right: auto;
+    float: right;
+    margin-left: auto;
+    margin-right: 0;
 }
 
 .container {
@@ -208,17 +197,17 @@ input[type="email"]:invalid::after {
 .sign_up_box:hover {
     background-color: var(--login_box_up_button_hover);
     color: var(--login_box_up_button_text_hover);
-    transform: scale(1.1, 1.1);
-    -webkit-transform: scale(1.1, 1.1);
-    -moz-transform: scale(1.1, 1.1);
+    transform:scale(1.1,1.1);
+    -webkit-transform:scale(1.1,1.1);
+    -moz-transform:scale(1.1,1.1);
 }
 .sign_in_box:hover {
     background-color: var(--login_box_in_button_hover);
     color: var(--login_box_in_button_text_hover);
-    transform: scale(1.1, 1.1);
-    -webkit-transform: scale(1.1, 1.1);
-    -moz-transform: scale(1.1, 1.1);
-}
+    transform:scale(1.1,1.1);
+    -webkit-transform:scale(1.1,1.1);
+    -moz-transform:scale(1.1,1.1);
+  }
 
 .line {
     display: flex;
