--- a/login/login.css
+++ b/login/login.css
@@ -62,7 +62,7 @@ body {
 
 .main_div {
     width: 100%;
-    margin: 0;
+    margin-top: 0rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
     justify-content: center;
