--- a/global/header.css
+++ b/global/header.css
@@ -1,57 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Anuphan&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 @media (prefers-color-scheme: light) {
-  :root{
-    --header:#38383b;
-    --header_button_bg: #c6bead;
-    --header_nav_links: #38383b;
-    --header_button_hover: #ece3d0;
-    --header_text: #c6bead;
-  }
+    :root {
+        --header: #38383b;
+        --header_button_bg: #c6bead;
+        --header_nav_links: #38383b;
+        --header_button_hover: #ece3d0;
+        --header_text: #c6bead;
+    }
 }
-  @media (prefers-color-scheme: dark)
-{
-
-  :root{
-  --header:#c6bead;
-  --header_button_bg: #545456;
-  --header_nav_links: #dbd4c5;
-  --header_button_hover: #1c1c1d;;
-  --header_text: #38383b;
-}
+@media (prefers-color-scheme: dark) {
+    :root {
+        --header: #c6bead;
+        --header_button_bg: #545456;
+        --header_nav_links: #dbd4c5;
+        --header_button_hover: #1c1c1d;
+        --header_text: #38383b;
+    }
 }
 
-.page_header {
-    background: var(--header);
-    color: var(--header_nav_links);
+/* .home_page_header::before{
+  background-color: rgba(0,0,0,0);
+  color:rgba(0,0,0,0);
+
+}
+.home_page_header::after{
+  background: var(--header);
+  color: var(--header_nav_links);
+
+}
+.home_page_header::before,*/
+
+.page_header, .page_header_invis {
     height: 50px;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     font-family: "Poppins", sans-serif;
-    font-size: 20px;
-    line-height: 1.5;
     padding-top: 0.2rem;
     padding-left: 1rem;
     border: none;
     padding-bottom: 0.2rem;
-    
-  }
-  .header_left {
+    z-index: 1000;
+    background: var(--header);
+    color: var(--header_nav_links);
+    transition: top 1s;
+    display: flex;
+    justify-content: space-between
+}
+.page_header_invis {
+    transition: none;
+    top: -50px;
+}
+
+.header_left {
     text-align: left;
-    float: left;
+    display: flex;
+    align-items: center;
     width: auto;
     height: 100%;
-    vertical-align: middle;
     font-family: "Poppins", sans-serif;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-weight: 500;
-    line-height: 0;
     color: var(--header_text);
-  }
-  .header_right {
+    transition: all 0.5s;
+}
+.header_right {
     text-align: right;
     position: relative;
     width: auto;
@@ -60,10 +76,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    justify-content: flex-end;
-    padding-right: 1.5rem; /*distance from nav buttons to right side*/    
-  }
-  .header_nav_links {
+    padding-right: 1.5rem; /*distance from nav buttons to right side*/
+}
+.header_nav_links {
     font-family: "Poppins", sans-serif;
     text-decoration: none;
     text-decoration: bold;
@@ -72,22 +87,23 @@
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     color: var(--header_nav_text);
-  }
-  .filler {
-    position:relative;
-    top:0;
-    height: 60px;
-  }
-  .header_nav_button{
+}
+.filler {
+    position: relative;
+    top: 0;
+    height: 50px;
+    background: var(--inherit);
+}
+.header_nav_button {
     display: inline;
     border-radius: 1rem;
     border: none;
     border-width: 0;
-    margin-right: 1rem;/*distance between boxes */    
+    margin-right: 1rem; /*distance between boxes */
     background: var(--header_button_bg);
     color: var(--header_nav_links);
     -webkit-transition: color 0.5s background-color 0.5s;
-    transition: background-color 0.5s ease, color 0.5s ease;  
+    transition: background-color 0.5s ease, color 0.5s ease;
     border: none;
     border-radius: 0.5rem;
     padding-left: 0.5rem;
@@ -95,7 +111,7 @@
     padding-top: 0.3rem;
     padding-bottom: 0.3rem;
     text-align: center;
-  }
-  .header_nav_button:hover{
+}
+.header_nav_button:hover {
     background: var(--header_button_hover);
-  }
+}
