--- a/settings/settings.css
+++ b/settings/settings.css
@@ -1,11 +1,84 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 
-button,
-body {
+@media (prefers-color-scheme: light) {
+  :root {
+    --background: #f5e9d0;
+    --main_div_text_color: #000000;
+    --main_div_link_color: #393939;
+    --placeholder_text: lightslategray;
+    --preferences_text_color: #b49f89;
+    --submit_button_bg: #756749;
+    --submit_button_text: #000000;
+    --submit_button_bg_hover: #988e79;
+    --submit_button_text_hover: #3a2f18;
+    --submit_button_bg_active: #4a412e;
+    --submit_button_text_active: #fefefe;
+  }
+}
+
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #2f2c26;
+    --main_div_text_color: #f5e9d0;
+    --main_div_link_color: #d7d7d7;
+    --placeholder_text: lightslategray;
+    --preferences_text_color: #b49f89;
+    --submit_button_bg: #756749;
+    --submit_button_text: #000000;
+    --submit_button_bg_hover: #988e79;
+    --submit_button_text_hover: #3a2f18;
+    --submit_button_bg_active: #4a412e;
+    --submit_button_text_active: #fefefe;
+
+
+  }
+}
+
+
+/* 
+.entry{
   font-family: "Poppins", sans-serif;
   font-size: 16px;
-  line-height: 1.5;
   text-decoration: bold;
+} */
+
+.columns {
+  display: flex;
+
+  width: 100%;
+
+}
+
+.column {
+  width: 45%;
+  float: left;
+  color: #b49f89;
+  font-size: 2rem;
+  flex-flow: column wrap;
+
+  padding-left: 2rem;
+}
+
+.heading {
+  font-size: 2.5rem;
+  font-family: "Poppins", sans-serif;
+
+}
+
+.name_inputs_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+
+}
+
+.input_label {
+  font-size: 1.52rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 
 input {
@@ -13,90 +86,33 @@ input {
   height: 2rem;
   border-radius: 0.5rem;
   border-width: 0.01rem;
+  font-size: 1.25rem;
+  font-family: "Poppins", sans-serif;
 }
 
 input::placeholder {
-  color: lightslategray;
+  color: var(--placeholder_text);
   opacity: 0.5;
 }
 
-h1 {
-  margin: 0;
-}
-
-
-.input_label {
+.submit_button {
   font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.entry{
   font-family: "Poppins", sans-serif;
-  font-size: 16px;
-  text-decoration: bold;
+  border-radius: 2rem;
+  border: none;
+  /* left and right padding =1rem top and bottom padding = 0.5rem */
+  padding: 0.25rem 1.5rem;
+  background: var(--submit_button_bg);
+  transition: all linear 0.3s;
 }
+.submit_button:hover{
+  background: var(--submit_button_bg_hover);
+  color: var(--submit_button_text_hover);
 
-
-
-.column{
-  width : 45%;
-  float: left;
-  color: #b49f89;
-  font-size : 20px;
-  padding-left: 2rem;
 }
-
-.row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.name_inputs_container{
-  display: flex;
-  flex-direction: column;
-}
-
-/* Themes */
-@media (prefers-color-scheme: light) {
-
-  /* button {
-    background: #38383b;
-    color: #c6bead;
-  }
-  button :hover{
-    background: #57575c;
-    color: #c6bead;
-  }
-  button:active{
-    background: #867550;
-    color: #c6bead;
-  } */
-
-  .input_label{
-    color: #38383b;
-  }
-
-  .heading{
-    color: #38383b;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  body,option {
-    background: #38383b;
-    color: #c6bead;
-  }
-  /* button {
-    background: #c6bead;
-    color: #38383b;
-  }
-  button:hover{
-    background: #ada28a;
-    color: #c6bead;
-  } */
-  /* button:active{
-    background: #867550;
-    color: #c6bead;
-  } */
+.submit_button:active{
+  background: var(--submit_button_bg_active);
+  transition: all linear 0.1s;
+  color: var(--submit_button_text_active);
 
 }
