--- a/global/global_header.css
+++ b/global/global_header.css
@@ -10,7 +10,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Anuphan&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 :root {
-    --header_height: calc(40px + 0.5 * (2vw + 0.5vh));
+    --header_height: calc(60px + 0.75 * (2vw + 0.5vh));
 }
 @media (prefers-color-scheme: light) {
     :root {
@@ -76,7 +76,7 @@
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
-    font-size: 2.5vw;
+    font-size: 3vw;
     color: var(--header_text);
     margin: 0 0 0 1rem;
     padding: 0;
@@ -92,16 +92,17 @@
 .global_header .header_right button {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
-    font-size: 1.7vw;
+    font-size: 2.25vw;
     padding-left: 1em;
     padding-right: 1em;
     border-radius: 0.5em;
     border: none;
     background: var(--header_button_bg);
     color: var(--header_nav_text);
-    margin-right: 1rem;
+    margin-right: 1.25rem;
     box-sizing: content-box;
     transition: background-color ease-in-out 0.2s, color ease-in-out 0.2s;
+    transition: left 1s linear;
 }
 .global_header .header_right button:hover {
     background: var(--header_button_hover);
@@ -129,3 +130,4 @@
     animation-duration: 1s;
     animation-fill-mode: forwards;
 }
+
