--- a/sign_up/sign_up.css
+++ b/sign_up/sign_up.css
@@ -73,14 +73,16 @@ body {
     background: var(--background);
 }
 
+
 .main_div {
+    position:relative;
     width: 100%;
-    margin: 0;
-    padding-top: 2rem;
+    margin-top: 0.2rem;
+    padding-top: 1vh;
     padding-bottom: 2rem;
     justify-content: center;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
 }
 .signin_box {
     width: 40%;
