--- a/login/login.css
+++ b/login/login.css
@@ -53,13 +53,15 @@
     }
 }
 
-body {
+html,body {
     font-family: "Poppins", sans-serif;
     display:flex;
     flex-flow: column nowrap;
     font-size: 16px;
     line-height: 1.5;
     background: var(--background);
+    transition: all 1s ease;
+
 }
 
 .main_div {
@@ -84,7 +86,7 @@ body {
     padding-left: 1rem;
     padding-right: 2rem;
     display: block;
-    font-size: 20px;
+    font-size: 2.75vh;
     background-color: var(--login_box_background);
     /* font-family: "Anuphan", sans-serif; */
     -webkit-box-shadow: 0px 0px 5px 4px var(--shadow);
@@ -96,7 +98,7 @@ body {
     padding-bottom: 2rem;
     padding-left: 2rem;
     padding-right: 2rem;
-    font-size: 20px;
+    font-size: 2.75vh;
     font-family: "Roboto", sans-serif;
     text-align: left;
     margin-top: 0.2rem;
@@ -105,7 +107,7 @@ body {
 }
 .input_box {
     font-family: "Poppins", sans-serif;
-    font-size: 20px;
+    font-size: 2.75vh;
     border-radius: 0.5rem;
     border: 0.5px solid var(--button_border);
     border-radius: 0.5rem;
@@ -166,7 +168,7 @@ input[type="email"]:invalid::after {
 .sign_in_box,
 .sign_up_box {
     font-family: "Poppins", sans-serif;
-    font-size: 20px;
+    font-size: 3.25vh;
     border: 2px solid var(--button_border);
     border-radius: 2rem;
     text-align: center;
@@ -217,7 +219,7 @@ input[type="email"]:invalid::after {
 .line {
     display: flex;
     flex-direction: row;
-    font-size: 18px;
+    font-size: 3vh;
     text-align: center;
 }
 .line:before,
@@ -239,7 +241,7 @@ input[type="email"]:invalid::after {
 }
 
 input {
-    font-size: 20px;
+    font-size: 3vh;
     font-family: "Roboto", sans-serif;
 }
 input::placeholder {
@@ -254,7 +256,7 @@ form i {
 }
 
 .forgot_password {
-    font-size: 14px;
+    font-size: 2vh;
     font-family: "Roboto", sans-serif;
     text-align: right;
     margin-top: 0.2rem;
