--- a/settings/settings.css
+++ b/settings/settings.css
@@ -9,10 +9,16 @@
     --preferences_text_color: #b49f89;
     --submit_button_bg: #756749;
     --submit_button_text: #000000;
-    --submit_button_bg_hover: #988e79;
+    --submit_button_bg_hover: #7e735a;
     --submit_button_text_hover: #3a2f18;
-    --submit_button_bg_active: #4a412e;
-    --submit_button_text_active: #fefefe;
+    --submit_button_bg_active: #3b3425;
+    --submit_button_text_active: #c7bba2;
+    --column-bg-color: #c8b895;
+
+    --theme-button-color: #4a412e;
+    --theme-not-selected: rgb(170, 148, 98);
+    --theme-selected:  rgb(209, 186, 143); 
+    --theme-half-selected: rgb(185, 165, 124);
   }
 }
 
@@ -30,8 +36,12 @@
     --submit_button_text_hover: #3a2f18;
     --submit_button_bg_active: #4a412e;
     --submit_button_text_active: #fefefe;
+    --column-bg-color: #3c372b;
 
-
+    --theme-button-color: #dbd2be;
+    --theme-not-selected: rgb(124, 104, 64);
+    --theme-selected: rgb(64, 54, 32);
+    --theme-half-selected: rgb(94, 79, 47);
   }
 }
 
@@ -42,17 +52,28 @@
   font-size: 16px;
   text-decoration: bold;
 } */
+html, body {
+  margin: 0;
+  background: var(--background);
+  overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  transition: all 1s ease;
+}
 
 .columns {
   display: flex;
   position:relative;
   width: 100%;
-  padding-top: 1vh;
-
+  margin: 0;
+  padding: 0;
 }
 
 .column {
-  width: 45%;
+  margin: 1vw;
+  background-color: var(--column-bg-color);
+  border-radius: 1vw;
+  width: 48vw;
   float: left;
   color: #b49f89;
   font-size: 2rem;
@@ -103,17 +124,60 @@ input::placeholder {
   border: none;
   /* left and right padding =1rem top and bottom padding = 0.5rem */
   padding: 0.25rem 1.5rem;
-  background: var(--submit_button_bg);
   transition: all linear 0.3s;
 }
 .submit_button:hover{
-  background: var(--submit_button_bg_hover);
   color: var(--submit_button_text_hover);
-
+  background-color: var(--submit_button_bg_hover);
 }
 .submit_button:active{
-  background: var(--submit_button_bg_active);
-  transition: all linear 0.1s;
   color: var(--submit_button_text_active);
+  background-color: var(--submit_button_bg_active);
+
+}
+
+
+
+.triple-button {
+  display: flex;
+  width:fit-content;
+  border: none;
+  padding:0;
+  border-radius: 3vw;
+  transition: background-image 1s linear;
+  margin: 1vh 0 1vh 0;
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.3);
+
+}
+.theme-button{
+  padding:0;
+  margin:0;
+  background-color: transparent;
+}
+.theme-button button {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  width: 20%;
+  font-size: 1.5vw;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  margin:0;
+  padding: 0.75vw 2.25vw 0.75vw 2.25vw;
+  color: var(--theme-button-color);
+}
+
+
+
+.x{
+  
+  background-image: linear-gradient(90deg, var(--theme-not-selected) 0%, var(--theme-half-selected) 33.33%, var(--theme-selected) 66.66%, var(--theme-selected) 100%);
+  transition: background-image 1s linear;
+}
+.x:hover{
+  background-image: linear-gradient(90deg, var(--theme-selected) 0%, var(--theme-selected) 33.33%, var(--theme-half-selected) 66.66%, var(--theme-not-selected) 100%);
+}
+.x:active{
+  background-image: linear-gradient(90deg, var(--theme-not-selected) 0%, var(--theme-selected) 33.33%, var(--theme-selected) 66.66%, var(--theme-not-selected) 100%);
 
 }
