--- a/sign_up/sign_up.css
+++ b/sign_up/sign_up.css
@@ -1,20 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 @import url("https://fonts.googleapis.com/css2?family=Anuphan&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
-* {
-    animation: fadeInAnimation ease 0.5s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
- 
-@keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-     }
-}
+
 @media (prefers-color-scheme: light) {
     :root {
         /* --main: rgb(237,242,247);
@@ -71,6 +58,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     background: var(--background);
+    transition: all 1s ease;
 }
 
 
@@ -96,7 +84,7 @@ body {
     padding-left: 1rem;
     padding-right: 2rem;
     display: block;
-    font-size: 20px;
+    font-size: 2.75vh;
     background-color: var(--login_box_background);
     /* font-family: "Anuphan", sans-serif; */
     -webkit-box-shadow: 0px 0px 5px 4px var(--shadow);
@@ -108,7 +96,7 @@ body {
     padding-bottom: 2rem;
     padding-left: 2rem;
     padding-right: 2rem;
-    font-size: 20px;
+    font-size: 2.75vh;
     font-family: "Roboto", sans-serif;
     text-align: left;
     margin-top: 0.2rem;
@@ -117,7 +105,7 @@ body {
 }
 .input_box {
     font-family: "Poppins", sans-serif;
-    font-size: 20px;
+    font-size: 2.75vh;
     border-radius: 0.5rem;
     border: 0.5px solid var(--button_border);
     border-radius: 0.5rem;
@@ -156,7 +144,7 @@ body {
 .sign_in_box,
 .sign_up_box {
     font-family: "Poppins", sans-serif;
-    font-size: 20px;
+    font-size: 3.25vh;
     border: 2px solid var(--button_border);
     border-radius: 2rem;
     text-align: center;
@@ -205,7 +193,7 @@ body {
 .line {
     display: flex;
     flex-direction: row;
-    font-size: 18px;
+    font-size: 3vh;
     text-align: center;
 }
 .line:before,
@@ -227,7 +215,7 @@ body {
 }
 
 input {
-    font-size: 20px;
+    font-size: 3vh;
     font-family: "Roboto", sans-serif;
 }
 input::placeholder {
@@ -242,7 +230,7 @@ form i {
 }
 
 .forgot_password {
-    font-size: 14px;
+    font-size: 2vh;
     font-family: "Roboto", sans-serif;
     text-align: right;
     margin-top: 0.2rem;
